--- a/hello.html
+++ b/hello.html
@@ -2,6 +2,11 @@
 <html>
     <head>
         <title>HTML File</title>
+        <style>
+            h1 {
+                color: blue;
+            }
+        </style>
     </head>
     <body>
         <h1>
